--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-\Create-key\bin
-\Create-key\obj
-\Meter\bin
-\Meter\obj
-\STHM\bin
-\STHM\obj
+/Create-key/bin/Debug
+/Create-key/obj/Debug
+/Meter/bin/Debug
+/Meter/obj/Debug
+/STHM/bin/Debug
+/STHM/obj/Debug
